update according to PR comments

--- a/example/extract/extract_txt.ipynb
+++ b/example/extract/extract_txt.ipynb
@@ -33,12 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "{'basic': ['LinearFlow'],\n",
-       " 'extract': ['ExtractTxtFlow'],\n",
-       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
-       " 'transform': ['TransformHuggingFaceFlow',\n",
-       "  'TransformLMQGFlow',\n",
-       "  'TransformOpenAIFlow']}"
+       "{'extract': ['ExtractTxtFlow'], 'transform': []}"
       ]
      },
      "execution_count": 2,
@@ -50,7 +45,7 @@
     "from uniflow.extract.client import Client\n",
     "from uniflow.extract.config import ExtractTxtConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
@@ -82,7 +77,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 14513.16it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 16980.99it/s]"
      ]
     },
     {
@@ -111,7 +106,7 @@
       "                       \"the concept of superlinear returns. And if you're \"\n",
       "                       'ambitious you definitely should, because this will be '\n",
       "                       'the wave you surf on.']}],\n",
-      "  'root': <uniflow.node.node.Node object at 0x10a85b820>}]\n"
+      "  'root': <uniflow.node.node.Node object at 0x105736650>}]\n"
      ]
     },
     {
@@ -211,7 +206,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105def940>"
+       "<graphviz.graphs.Digraph at 0x105517a90>"
       ]
      },
      "metadata": {},
