--- a/example/pipeline/pipeline.ipynb
+++ b/example/pipeline/pipeline.ipynb
@@ -33,10 +33,9 @@
     {
      "data": {
       "text/plain": [
-       "{'basic': ['LinearFlow'],\n",
-       " 'extract': ['ExtractTxtFlow'],\n",
-       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       "{'extract': ['ExtractTxtFlow'],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
@@ -49,7 +48,9 @@
    "source": [
     "from uniflow.pipeline import Pipeline\n",
     "from uniflow.config import PipelineConfig\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.transform.config import TransformOpenAIConfig\n",
+    "from uniflow.extract.config import ExtractTxtConfig\n",
+    "from uniflow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
@@ -60,7 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Pipeline(PipelineConfig())"
+    "p = Pipeline(PipelineConfig(\n",
+    "    extract_config=ExtractTxtConfig(),\n",
+    "    transform_config=TransformOpenAIConfig(),\n",
+    "))"
    ]
   },
   {
@@ -81,10 +85,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 373.03it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 892.79it/s]\n",
-      "100%|██████████| 4/4 [00:03<00:00,  1.04it/s]\n",
-      "100%|██████████| 4/4 [00:03<00:00,  1.14it/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 14665.40it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 435.32it/s]\n",
+      "100%|██████████| 4/4 [00:03<00:00,  1.08it/s]\n",
+      "100%|██████████| 4/4 [00:03<00:00,  1.06it/s]\n"
      ]
     }
    ],
@@ -100,30 +104,30 @@
     {
      "data": {
       "text/plain": [
-       "[[{'output': [{'response': [\"question: What was something the speaker didn't understand about the world as a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "[[{'output': [{'response': [\"question: What was one of the most important things you didn't understand about the world when you were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111890640>},\n",
+       "   'root': <uniflow.node.node.Node at 0x11818d060>},\n",
        "  {'output': [{'response': [\"question: What is the consequence of having a product that is only half as good as your competitor's?\\nanswer: You get no customers, and you go out of business.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111890f10>},\n",
-       "  {'output': [{'response': ['question: Where else do we see the pattern of superlinear returns for performance?\\nanswer: We see the same pattern in fame, power, military victories, knowledge, and even benefit to humanity.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x118137910>},\n",
+       "  {'output': [{'response': ['question: In what other areas besides business do we see superlinear returns for performance?\\nanswer: fame, power, military victories, knowledge, and benefit to humanity.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111891330>},\n",
-       "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because it will be the wave they surf on.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x11818e6b0>},\n",
+       "  {'output': [{'response': ['question: What concept should ambitious individuals understand in order to succeed?\\nanswer: The concept of superlinear returns.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111892710>}],\n",
-       " [{'output': [{'response': [\"question: What is one of the most important things you didn't understand about the world when you were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "   'root': <uniflow.node.node.Node at 0x11818ea70>}],\n",
+       " [{'output': [{'response': [\"question: What is something important that the speaker didn't understand about the world when they were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111893ac0>},\n",
-       "  {'output': [{'response': ['question: What do teachers and coaches often say about the relationship between effort and results?\\nanswer: \"You get out what you put in.\"'],\n",
+       "   'root': <uniflow.node.node.Node at 0x11818ca30>},\n",
+       "  {'output': [{'response': ['question: What do teachers and coaches often say about the relationship between effort and returns?\\nanswer: They often say, \"You get out what you put in,\" implying that the returns are linear.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111891060>},\n",
-       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: fame, power, military victories, knowledge, and benefit to humanity.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x11818cf40>},\n",
+       "  {'output': [{'response': ['question: In what other areas do we see the same pattern of superlinear returns for performance?\\nanswer: Fame, power, military victories, knowledge, and benefit to humanity.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111892bf0>},\n",
-       "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because this will be the wave they surf on.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x11818ce50>},\n",
+       "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because superlinear returns will be the wave ambitious people surf on.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x111890eb0>}]]"
+       "   'root': <uniflow.node.node.Node at 0x11818ee60>}]]"
       ]
      },
      "execution_count": 6,
