--- a/example/transform/model.ipynb
+++ b/example/transform/model.ipynb
@@ -69,7 +69,7 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.transform.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow_factory import FlowFactory\n",
     "from uniflow.transform.config import TransformConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
@@ -93,10 +93,9 @@
     {
      "data": {
       "text/plain": [
-       "{'basic': ['LinearFlow'],\n",
-       " 'extract': ['ExtractTxtFlow'],\n",
-       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       "{'extract': [],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
@@ -164,7 +163,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = TransformConfig(model_config=OpenAIModelConfig())\n",
+    "config = TransformConfig(\n",
+    "    flow_name=\"TransformOpenAIFlow\",\n",
+    "    model_config=OpenAIModelConfig()\n",
+    ")\n",
     "client = Client(config)"
    ]
   },
@@ -184,12 +186,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  2.32it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00,  2.52it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'output': [{'response': ['question: What was the weather like on that day?\\nanswer: It was sunny.'],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x11619e290>},\n",
+       " {'output': [{'response': [\"question: What is Bobby's occupation?\\nanswer: Software engineer working on AI/ML.\"],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x11619df00>}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = client.run(data)"
+    "output = client.run(data)\n",
+    "output"
    ]
   },
   {
@@ -209,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What was the weather like?\\nanswer: sunny.'],\n",
+       "{'response': ['question: What was the weather like on that day?\\nanswer: It was sunny.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -279,7 +297,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1109c4520>"
+       "<graphviz.graphs.Digraph at 0x107362fe0>"
       ]
      },
      "metadata": {},
@@ -339,7 +357,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1065e9ba0>"
+       "<graphviz.graphs.Digraph at 0x107363040>"
       ]
      },
      "metadata": {},
