--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -69,7 +69,7 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.transform.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow_factory import FlowFactory\n",
     "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
@@ -93,10 +93,9 @@
     {
      "data": {
       "text/plain": [
-       "{'basic': ['LinearFlow'],\n",
-       " 'extract': ['ExtractTxtFlow'],\n",
-       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       "{'extract': [],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
@@ -214,22 +213,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:02<00:00,  1.24s/it]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.31it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "      'question': 'What was the color of the sky?',\n",
+       "      'question': 'What color was the sky?',\n",
        "      'answer': 'blue.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10a7334c0>},\n",
+       "  'root': <uniflow.node.node.Node at 0x1160a2500>},\n",
        " {'output': [{'response': [{'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
-       "      'question': 'What is your profession?',\n",
-       "      'answer': 'software engineer.'}],\n",
+       "      'question': \"What is Bobby's profession?\",\n",
+       "      'answer': 'software engineer working on AI/ML.'}],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x10a7334f0>}]"
+       "  'root': <uniflow.node.node.Node at 0x1160a2530>}]"
       ]
      },
      "execution_count": 8,
@@ -260,7 +259,7 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What was the color of the sky?',\n",
+       "   'question': 'What color was the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
@@ -330,7 +329,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10565ba90>"
+       "<graphviz.graphs.Digraph at 0x1103495d0>"
       ]
      },
      "metadata": {},
@@ -390,7 +389,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1056b5930>"
+       "<graphviz.graphs.Digraph at 0x11034a7d0>"
       ]
      },
      "metadata": {},
