--- a/example/transform/lmqg_model.ipynb
+++ b/example/transform/lmqg_model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for LMQAModelFlow "
+    "# Notebook for LMQGModelFlow "
    ]
   },
   {
@@ -165,7 +165,7 @@
       "Requirement already satisfied: smmap<6,>=3.0.1 in /Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages (from gitdb<5,>=4.0.1->GitPython!=3.1.29,>=1.0.0->wandb->lmqg) (5.0.1)\n",
       "Collecting en-core-web-sm==3.7.1\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m:01\u001b[0m\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m56.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m31m52.4 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
       "\u001b[?25hRequirement already satisfied: spacy<3.8.0,>=3.7.2 in /Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages (from en-core-web-sm==3.7.1) (3.7.2)\n",
       "Requirement already satisfied: spacy-legacy<3.1.0,>=3.0.11 in /Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (3.0.12)\n",
       "Requirement already satisfied: spacy-loggers<2.0.0,>=1.0.0 in /Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages (from spacy<3.8.0,>=3.7.2->en-core-web-sm==3.7.1) (1.0.5)\n",
@@ -343,11 +343,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 587.11it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 1865.59it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2074.33it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 3597.17it/s]\n",
-      "100%|██████████| 2/2 [00:12<00:00,  6.07s/it]\n"
+      "100%|██████████| 4/4 [00:00<00:00, 922.28it/s]\n",
+      "100%|██████████| 4/4 [00:00<00:00, 1688.53it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 1754.94it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 2968.37it/s]\n",
+      "100%|██████████| 2/2 [00:14<00:00,  7.05s/it]\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1058e9c60>"
+       "<graphviz.graphs.Digraph at 0x105b757e0>"
       ]
      },
      "metadata": {},
@@ -503,7 +503,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x165534160>"
+       "<graphviz.graphs.Digraph at 0x105b75c00>"
       ]
      },
      "metadata": {},
