--- a/example/transform/openai_model.ipynb
+++ b/example/transform/openai_model.ipynb
@@ -67,7 +67,7 @@
     "from IPython.display import display\n",
     "\n",
     "from uniflow.transform.client import Client\n",
-    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow_factory import FlowFactory\n",
     "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.schema import Context\n",
@@ -90,10 +90,9 @@
     {
      "data": {
       "text/plain": [
-       "{'basic': ['LinearFlow'],\n",
-       " 'extract': ['ExtractTxtFlow'],\n",
-       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       "{'extract': [],\n",
        " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLinearFlow',\n",
        "  'TransformLMQGFlow',\n",
        "  'TransformOpenAIFlow']}"
       ]
@@ -177,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.91it/s]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.57it/s]\n"
      ]
     }
    ],
@@ -202,7 +201,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What color is the sky on a sunny day?\\nanswer: blue.'],\n",
+       "{'response': ['question: What was the weather like on the sunny day?\\nanswer: The weather was sunny and the sky color was blue.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -223,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What is your profession?\\nanswer: I am a talented software engineer working on AI/ML.'],\n",
+       "{'response': ['question: What field do you work in?\\nanswer: I work in the field of AI/ML as a talented software engineer.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -292,7 +291,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1100ae230>"
+       "<graphviz.graphs.Digraph at 0x106771120>"
       ]
      },
      "metadata": {},
@@ -352,7 +351,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x110274ca0>"
+       "<graphviz.graphs.Digraph at 0x1065ae830>"
       ]
      },
      "metadata": {},
