--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -73,7 +73,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from uniflow.transform.client import Client\n",
-    "from uniflow.config import TransformOpenAIConfig\n",
+    "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.schema import Context\n",
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:03<00:00,  1.01s/it]\n"
+      "100%|██████████| 3/3 [00:02<00:00,  1.25it/s]\n"
      ]
     }
    ],
@@ -218,15 +218,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'],\n",
+       "[{'output': [{'response': ['question: How many bits of information do the events have in the next sections?\\nanswer: \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2899e4ac0>},\n",
-       " {'output': [{'response': ['question: How does information represent the degree of surprise or the abstract possibility of an event?\\nanswer: Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x2913c3df0>},\n",
+       " {'output': [{'response': ['question: How does the amount of information relate to the degree of surprise or the abstract possibility of an event?\\nanswer: The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2899e4970>},\n",
-       " {'output': [{'response': ['question: Who introduced the concept of information entropy for the first time?\\nanswer: Claude E. Shannon.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x2913c3d60>},\n",
+       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2899e4e50>}]"
+       "  'root': <uniflow.node.node.Node at 0x2913c3e80>}]"
       ]
      },
      "execution_count": 10,
@@ -278,17 +278,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>How much information do the events have in terms of bits?</td>\n",
-       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.</td>\n",
+       "      <td>How many bits of information do the events have in the next sections?</td>\n",
+       "      <td>\\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How does information represent the degree of surprise or the abstract possibility of an event?</td>\n",
-       "      <td>Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.</td>\n",
+       "      <td>How does the amount of information relate to the degree of surprise or the abstract possibility of an event?</td>\n",
+       "      <td>The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Who introduced the concept of information entropy for the first time?</td>\n",
+       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
        "      <td>Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -296,10 +296,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                          question                                                                                                                                                                                      answer\n",
-       "0                                        How much information do the events have in terms of bits?                                                                                                       The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.\n",
-       "1   How does information represent the degree of surprise or the abstract possibility of an event?   Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.\n",
-       "2                            Who introduced the concept of information entropy for the first time?                                                                                                                                                                          Claude E. Shannon."
+       "                                                                                                        question                                                                                                                                                                                                  answer\n",
+       "0                                          How many bits of information do the events have in the next sections?                                                                                          \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information.\n",
+       "1   How does the amount of information relate to the degree of surprise or the abstract possibility of an event?   The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.\n",
+       "2                                                  Who published A Mathematical Theory of Communication in 1948?                                                                                                                                                                                      Claude E. Shannon."
       ]
      },
      "execution_count": 11,
