--- a/example/pipeline/pipeline_txt.ipynb
+++ b/example/pipeline/pipeline_txt.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "from uniflow.pipeline import MultiProcessPipeline\n",
+    "from uniflow.pipeline import MultiThreadPool\n",
     "from uniflow.config import PipelineConfig\n",
     "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.extract.config import ExtractTxtConfig\n",
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = MultiProcessPipeline(PipelineConfig(\n",
+    "p = MultiThreadPool(PipelineConfig(\n",
     "    extract_config=ExtractTxtConfig(),\n",
     "    transform_config=TransformOpenAIConfig(),\n",
     "))"
