--- a/example/pipeline/pipeline_pdf.ipynb
+++ b/example/pipeline/pipeline_pdf.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.pipeline import MultiThreadPool\n",
+    "from uniflow.pipeline import MultiFlowsPipeline\n",
     "from uniflow.config import PipelineConfig\n",
     "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.extract.config import ExtractPDFConfig\n",
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "p = MultiThreadPool(PipelineConfig(\n",
+    "p = MultiFlowsPipeline(PipelineConfig(\n",
     "    extract_config=extract_config,\n",
     "    transform_config=transform_config,\n",
     "))"
