--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -54,7 +54,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/joseortiz/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -72,11 +72,11 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.transform.client import Client\n",
-    "from uniflow.transform.config import TransformOpenAIConfig\n",
+    "from uniflow.flow.client import ExtractClient,TransformClient\n",
+    "from uniflow.flow.config import TransformOpenAIConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from dotenv import load_dotenv\n",
-    "from uniflow.schema import Context\n",
+    "from uniflow.op.prompt_schema import Context\n",
     "\n",
     "load_dotenv()"
    ]
@@ -190,7 +190,7 @@
    "outputs": [],
    "source": [
     "config = TransformOpenAIConfig()\n",
-    "client = Client(config)"
+    "client = TransformClient(config)"
    ]
   },
   {
@@ -202,7 +202,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:02<00:00,  1.25it/s]\n"
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:08<00:00,  2.69s/it]\n"
      ]
     }
    ],
@@ -218,15 +225,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How many bits of information do the events have in the next sections?\\nanswer: \\\\(0\\\\textrm{ bits}\\\\), \\\\(2\\\\textrm{ bits}\\\\), \\\\(~5.7\\\\textrm{ bits}\\\\), and \\\\(~225.6\\\\textrm{ bits}\\\\) of information.'],\n",
+       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2913c3df0>},\n",
-       " {'output': [{'response': ['question: How does the amount of information relate to the degree of surprise or the abstract possibility of an event?\\nanswer: The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dd2a0>},\n",
+       " {'output': [{'response': ['question: How does the amount of information relate to the degree of surprise or abstract possibility of an event?\\nanswer: The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2913c3d60>},\n",
-       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dcfa0>},\n",
+       " {'output': [{'response': ['question: Who is credited with establishing the theory of information in 1948?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2913c3e80>}]"
+       "  'root': <uniflow.node.node.Node at 0x7f2a1b5dd3f0>}]"
       ]
      },
      "execution_count": 10,
@@ -278,17 +285,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>How many bits of information do the events have in the next sections?</td>\n",
-       "      <td>\\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information.</td>\n",
+       "      <td>How much information do the events have in terms of bits?</td>\n",
+       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>How does the amount of information relate to the degree of surprise or the abstract possibility of an event?</td>\n",
-       "      <td>The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.</td>\n",
+       "      <td>How does the amount of information relate to the degree of surprise or abstract possibility of an event?</td>\n",
+       "      <td>The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
+       "      <td>Who is credited with establishing the theory of information in 1948?</td>\n",
        "      <td>Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -296,10 +303,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                                                        question                                                                                                                                                                                                  answer\n",
-       "0                                          How many bits of information do the events have in the next sections?                                                                                          \\(0\\textrm{ bits}\\), \\(2\\textrm{ bits}\\), \\(~5.7\\textrm{ bits}\\), and \\(~225.6\\textrm{ bits}\\) of information.\n",
-       "1   How does the amount of information relate to the degree of surprise or the abstract possibility of an event?   The amount of information represents the degree of surprise or the abstract possibility of the event. Unusual events require a lot of information, while common events may not need much information.\n",
-       "2                                                  Who published A Mathematical Theory of Communication in 1948?                                                                                                                                                                                      Claude E. Shannon."
+       "                                                                                                    question                                                                                                                                                                                                   answer\n",
+       "0                                                  How much information do the events have in terms of bits?                                                                                                                    The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.\n",
+       "1   How does the amount of information relate to the degree of surprise or abstract possibility of an event?   The amount of information represents the degree of surprise or the abstract possibility of the event. More unusual events require more information, while common events may not need much information.\n",
+       "2                                       Who is credited with establishing the theory of information in 1948?                                                                                                                                                                                       Claude E. Shannon."
       ]
      },
      "execution_count": 11,
